[project]
name = "memory-base"
version = "0.1.0"
description = "Abstracted database layer for sessions, messages, summaries, audit, archive (PostgreSQL + pgvector)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.28.0",
]
bos = [
    "baidubce>=1.4.0",
]
oss = [
    "oss2>=2.18.0",
]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory_base"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "real_oss: mark test to run against real Aliyun OSS (requires ALIYUN_OSS_* env and oss2).",
]